[project]
authors = [{name = "FNNDSC", email = "dev@babyMRI.org"}]
dependencies = []
description = "ChRIS compute resources Process and File CONtroller"
name = "pfcon"
requires-python = ">= 3.11"
version = "0.0.0+unknown"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "linux-ppc64le"]

[tool.pixi.pypi-dependencies]
pfcon = { path = ".", editable = true }

[tool.pixi.feature.build.tasks]
build = "hatch build -t wheel"

[tool.pixi.feature.prod.tasks]
postinstall-production = "pip install --no-deps --disable-pip-version-check --no-cache-dir dist/pfcon-*.whl"

[tool.pixi.dependencies]
flask = "2.3.*"
flask-restful = "0.3.10.*"
requests = "2.31.*"
keystoneauth1 = "4.3.*"
python-keystoneclient = "4.2.*"
python-swiftclient = "4.4.*"
pyjwt = "2.8.*"
environs = "9.5.*"

[tool.pixi.feature.test.dependencies]
pytest = "7.4.*"

[tool.pixi.feature.prod.dependencies]
gunicorn = "21.2.*"

[tool.pixi.feature.build.dependencies]
hatch = "*"

[tool.pixi.environments]
local = { features = ["test", "build"], solve-group = "default" }
prod = { features = ["prod"], solve-group = "default" }
