[project]
authors = [{name = "FNNDSC", email = "dev@babyMRI.org"}]
description = "ChRIS compute resources Process and File CONtroller"
name = "pfcon"
requires-python = ">= 3.11"
version = "0.0.0+unknown"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "linux-ppc64le"]

[tool.pixi.pypi-dependencies]
pfcon = { path = ".", editable = true }

[tool.pixi.feature.build.tasks]
build = "hatch build -t wheel"

[tool.pixi.feature.prod.tasks]
postinstall-production = "pip install --no-deps --disable-pip-version-check --no-cache-dir dist/pfcon-*.whl"

[tool.pixi.dependencies]
flask = "3.1.*"
flask-restful = "0.3.10.*"
requests = "2.32.*"
keystoneauth1 = "5.11.*"
python-keystoneclient = "5.8.*"
python-swiftclient = "4.9.*"
pyjwt = "2.11.*"
environs = "14.6.*"
jinja2 = "3.1.*"
docker-py = ">=7.1.0,<8"
python-kubernetes = ">=35.0.0,<36"

[tool.pixi.feature.test.dependencies]
pytest = "9.0.*"

[tool.pixi.feature.prod.dependencies]
gunicorn = "23.0.*"

[tool.pixi.feature.build.dependencies]
hatch = "*"

[tool.pixi.environments]
local = { features = ["test", "build"], solve-group = "default" }
prod = { features = ["prod"], solve-group = "default" }
